# AI-Clinical-Differential-Diagnosis-Engine

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  eval.yml  keepalive.yml  release.yml
data/: clinical_rules.yaml  symptom_synonyms.json
docs/: tier2_vm_runbook.md
eval/: metrics.py  run_eval.py
eval/cases/: README.md  case_01_t2dm_classic.json  case_02_community_pneumonia.json  case_03_acute_appendicitis.json  case_04_stemi.json  case_05_pulmonary_embolism.json  case_06_migraine.json  case_07_bacterial_meningitis.json  case_08_sepsis.json  case_09_dka.json  case_10_hypothyroidism.json  case_11_iron_deficiency_anemia.json  case_12_nephrolithiasis.json  case_13_asthma_exacerbation.json  case_14_copd_exacerbation.json  case_15_heart_failure.json  case_16_gerd.json  case_17_influenza.json  case_18_uti.json  case_19_hyperthyroidism.json  case_20_acute_pancreatitis.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mooseglove.json  pathodx.json
prompts/: differential_v1.yaml  differential_v2.yaml  differential_v3.yaml
services/api/: Dockerfile  requirements.in  requirements.txt
services/api/app/: config.py  dependencies.py  main.py  rate_limit.py
services/api/app/core/: context_builder.py  graph_rag.py  graph_rag_stream.py  graph_traversal.py  lab_rules.py  llm_client.py  retrieval.py  vector_search.py
services/api/app/guardrails/: emergency.py  input_validator.py  output_validator.py
services/api/app/models/: __init__.py  diagnosis.py  patient.py
services/api/tests/: conftest.py  test_emergency.py  test_graph_rag.py  test_guardrails.py  test_models.py
services/frontend/: .env.example  .env.production.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
services/frontend/public/: _headers  _redirects  disclaimer.html  privacy.html  theme-init.js
services/frontend/src/: App.tsx  index.css  main.tsx
services/ingestion/: build_icd_mapping.py  extract_medical_terms.py  primekg_loader.py  qdrant_indexer.py  requirements.txt  synthea_parser.py  verify_ingestion.py
tests/integration/: test_diagnose_smoke.py
tests/unit/: test_context_builder.py  test_disease_index.py  test_eval_metrics.py  test_evidence_grounding.py  test_lab_rules.py  test_retrieval.py
(+86 files in other folders)
