[project]
name = "pathodx"
version = "0.1.0"
description = "AI Clinical Differential Diagnosis Engine — Graph RAG + LLM"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
