[project]
name = "pathodx"
version = "0.1.0"
description = "AI Clinical Differential Diagnosis Engine — Graph RAG + LLM"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["services/api/tests", "tests/unit"]
pythonpath = ["services/api"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
# importlib mode: each test file is imported independently, avoiding
# "No module named tests.unit" when __init__.py files are present.
addopts = "--import-mode=importlib"
